everything but textures done

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="full-width header-wrapper">
         <header>
-            <h1>Style Tile Template</h1>
-            <h2>Project name</h2>
-            <h3>Style tile</h3>
+            <h1>Style Tile</h1>
+            <h2>On the rocks</h2>
+            <h3>fonts and colors</h3>
             <h4>Version 1</h4>
         </header>
     </div>
@@ -54,13 +54,13 @@
                 <h3 class="section-heading">Typography</h3>
                 <h1 class="h1-sample">A sample header</h1>
                 <p class="font-details-h1">
-                    <span class="font-name">Font Name</span>,
-                    <span class="font-color">#color value</span>
+                    <span class="font-name">Yeseva One</span>,
+                    <span class="font-color">#f2f2f2</span>
                 </p>
                 <h2 class="h2-sample">An example of a sub header</h2>
                 <p class="font-details-h2">
-                    <span class="font-name">Font Name</span>,
-                    <span class="font-color">#color value</span>
+                    <span class="font-name">Oswald</span>,
+                    <span class="font-color">#262626</span>
                 </p>
                 <p class="typography-sample">
                     This sample paragraph has <strong>strong parts</strong> and
@@ -74,8 +74,8 @@
                 <a href="#" class="typography-sample">This is an example of a text link.</a
           >
           <p class="font-details-a">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Josefin Sans</span>,
+            <span class="font-color">#262626</span>
           </p>
         </section>
         <section class="adjectives">
@@ -93,7 +93,7 @@
 
     <div class="full-width">
       <footer>
-        <p>Be creative - don't just use this template as is!</p>
+        <p>Style tile by Kalle for On the Rocks</p>
       </footer>
     </div>
   </body>
